--- a/v2microgateway/v2microgateway/pom.xml
+++ b/v2microgateway/v2microgateway/pom.xml
@@ -74,6 +74,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
@@ -82,6 +86,7 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
@@ -106,7 +111,7 @@
 						<name>
 							venkateshkrish/v2gt-${project.name}:${project.version}</name>
 					</image>
-					
+
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
@@ -118,6 +123,5 @@
 		</plugins>
 	</build>
 
-	
 
 </project>
