--- a/v2usermulti/src/main/resources/application.properties
+++ b/v2usermulti/src/main/resources/application.properties
@@ -32,7 +32,7 @@ login.url.path=/users/login
 
 authorization.token.header.name=Authorization
 authorization.token.header.prefix=Bearer
-
+management.endpoints.web.exposure.include=prometheus
 management.tracing.sampling.probability=1
 logging.pattern.level= %5p [${spring.application.name}, %X{traceId:-}, %X{spanId:-}]
 logging.level.com.v2micro.v2microtwo.security.AuthorizationFilter=DEBUG
